@@ -127,17 +127,21 @@ dnl Xft checking
 dnl ******************************
 
 AC_ARG_WITH(xft,
-            AC_HELP_STRING([--with-xft], [use xft scalable font database (default is auto)]),
+            AC_HELP_STRING([--with-xft], [use xft/fontconfig scalable font database (default is auto)]),
             [with_xft=$withval], [with_xft=auto])
 
 if test "x$with_xft" != "xno" ; then
 	dnl Test fontconfig package
-	PKG_CHECK_MODULES(XFT, xft, xft_ok=yes, xft_ok=no)
-	if test "x$xft_ok" != "xyes"; then
-		dnl test xft package
-		PKG_CHECK_MODULES(XFT, fontconfig, xft_ok=yes, xft_ok=no)
+	PKG_CHECK_MODULES(XFT, fontconfig, xft_ok=yes, xft_ok=no)
+	if test "x$xft_ok" = "xyes"; then
+		dnl Found fontconfig
+		AC_DEFINE(WITH_FONTCONFIG,1,[Use fontconfig database])
+	else
+		dnl Fontconfig not found
+		dnl Test old xft package
+		PKG_CHECK_MODULES(XFT, xft, xft_ok=yes, xft_ok=no)
 		if test "x$xft_ok" != "xyes"; then
-			dnl Have to test xft presence
+			dnl Have to test xft header presence
 			AC_CHECK_HEADER(X11/Xft/Xft.h, xft_ok=yes, xft_ok=no)
 			if test "x$xft_ok" != "xyes"; then
 				dnl No xft found
