@@ -1,3 +1,11 @@
+2003-12-16  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/module.c (sp_modules_init): Fixed argv extra indirection bug
+
+	* src/main.c (sp_main_console): Do not try to initialize Gdk
+
+	* src/libnrtype/nr-type-xft.c (nr_type_xft_init): Support fontconfig
+
 2003-12-15  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/style.h: Added currentcolor field to paint and
